# helloworld-cmake

./: CMakeLists.txt  Makefile  NEWS  README.md  TODO.md
debian/: .gitignore  changelog  control  copyright  postinst  rules
doc/: .gitignore  README.md
docker/: Dockerfile  Makefile
include/: CMakeLists.txt  README.md
include/helloworld/: helloworld.hpp
man/: .gitignore  README.md
scripts/: helloworld.sh
src/: CMakeLists.txt  README.md
src/helloworld/: CMakeLists.txt  main.cpp
src/libhelloworld/: CMakeLists.txt  helloworld.cpp
tests/: CMakeLists.txt
